--- a/tmux.conf
+++ b/tmux.conf
@@ -1,8 +1,6 @@
+set-option -g default-command "bash --login"
 set -g status off
-set-option -ga terminal-overrides ",xterm-256color:Tc"
+set -g default-terminal "xterm-256color"
 
-set -g @plugin 'tmux-plugins/tmux-resurrect'
-set -g @plugin 'tmux-plugins/tpm'
-set -g @plugin 'tmux-plugins/tmux-yank'
 
 
