--- a/tmux.conf
+++ b/tmux.conf
@@ -1,3 +1,5 @@
+set-option -ga terminal-overrides ",xterm-256color:Tc"
+
 set-option -g default-command "bash --login"
 set -g status off
 set -g default-terminal "xterm-256color"
